--- a/contact-success.html
+++ b/contact-success.html
@@ -2,5 +2,5 @@
 title: Contact Success
 ---
 
-<h2>Success</h2>
-<p class="subtext">Your message is sent. We'll be in touch soon.</p>
+<h2>Успех!</h2>
+<p class="subtext">Сообщение было отправлено и мы как можно скорее свяжемся с вами!</p>
