--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,7 @@
 ---
 title: Контакты
-heading: Мы будем рады ответить на все ваши вопросы.
+heading: Свяжитесь с нами
+description: И мы ответим вам уже сегодня!
 ---
 
 <div class="contact-box">
