--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,8 @@
 ---
 title: Контакты
 heading: Свяжитесь с нами
-description: Вы можете обратиться к нам по вопросам сотрудничества или с предложением улучшения сервиса.\nВ любом случае, вы получите от нас ответ сегодня же!
+description: Вы можете обратиться к нам по вопросам сотрудничества или с предложением улучшения сервиса.
+В любом случае, вы получите от нас ответ сегодня же!
 ---
 
 <div class="contact-box">
