--- a/contact-success.html
+++ b/contact-success.html
@@ -1,6 +1,5 @@
 ---
 title: Contact Success
+description: Your message has been sent. We'll be in touch soon.
+image: https://source.unsplash.com/WNAO036c6FM/2000x1322?a=.png
 ---
-
-<h2>Успех!</h2>
-<p class="subtext">Сообщение было отправлено и мы как можно скорее свяжемся с вами!</p>
