--- a/about.html
+++ b/about.html
@@ -1,14 +1,14 @@
 ---
-title: About
-description: We've built an amazing team of developers, marketers, designers and sales people.
-image: https://source.unsplash.com/BcoGknSqlDc/2000x1322?a=.png
+title: О нас
+description: Мы делаем поиск цветов и букетов для Вас быстрее и удобнее.
+image: https://firebasestorage.googleapis.com/v0/b/flowersales-471f5.appspot.com/o/web-site%2F319665-blackangel.jpg?alt=media&token=53d19f83-549e-414f-a348-f3037cdede8f
 ---
 
 <section class="hero" style="background-image: url({% include relative-src.html src=page.image %})">
 	<div class="inner-hero text-container">
 		<div class="hero-text-container">
-			<h1 class="editable">Our Story</h1>
-			<p class="subtext editable">We have an extremely talented team whose sole goal is to bring you closer to the people around you.</p>
+			<h1 class="editable">Наша история</h1>
+			<p class="subtext editable">Мы делаем поиск цветов и букетов для Вас быстрее и удобнее.</p>
 		</div>
 	</div>
 </section>
