--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@ bottom_image: https://source.unsplash.com/S_VbdMTsdiA/2000x1322?a=.png
 			<div class="cta button alt"><a href="#">Join Now</a></div>
 		</div>
 	</div>
-	<div class="learn-more"><a href="#learn-more">Learn more <span class="arrow">&#x25BC;</span></a></div>
+	<div class="learn-more"><a href="#learn-more">Узнать больше <span class="arrow">&#x25BC;</span></a></div>
 </section>
 
 <div class="content">
 	<section class="info" id="learn-more">
 		<div class="container flex">
 			<div class="text">
-				<h2 class="editable">Introduce yourself</h2>
-				<p class="editable">Making news friends in the adult world is hard. Frisco is the perfect filter matching you the most interesting people in your area.</p>
+				<h2 class="editable">Как мы помогаем быстро найти букет?</h2>
+				<p class="editable">Благодаря быстрому старту и простому UX дизайну, мы позволяем вам уже в считанные секунды найти тот букет, о котором вы мечтали всю жизнь!</p>
 			</div>
 			<div class="image">
-				<img class="editable" src="http://placehold.it/650x1300" alt="Screenshot" />
+				<img class="editable" src="{{ site.baseurl }}/images/Screenshot1.png" alt="Screenshot" />
 			</div>
 		</div>
 	</section>
