Site has been updated

--- a/contact.html
+++ b/contact.html
@@ -1,19 +1,14 @@
 ---
-title: Contact
-description: Send us a message to find out more!
-map:
-  latitude: -45.8787605
-  longitude: 170.5027976
-  address: "1 George Street, Dunedin, New Zealand"
-  zoom: 13
-image: https://source.unsplash.com/WNAO036c6FM/2000x1322?a=.png
+title: Контакты
+description: Свяжитесь с нами!
+image: https://firebasestorage.googleapis.com/v0/b/flowersales-471f5.appspot.com/o/web-site%2F319665-blackangel.png?alt=media&token=2be0d866-ff88-4573-95ec-119511fb3bc3
 ---
 
 <section class="hero" style="background-image: url({% include relative-src.html src=page.image %})">
 	<div class="inner-hero text-container">
 		<div class="hero-text-container">
-			<h1 class="editable">Get in touch today</h1>
-			<p class="subtext editable">If you have any questions or queries send us a message and we'll get back to you as soon as we can.</p>
+			<h1 class="editable">Свяжитесь с нами прямо сейчас</h1>
+			<p class="subtext editable">Если у вас есть вопросы или предложения, то свяжитесь нами и мы ответим вам как можно быстрее.</p>
 		</div>
 	</div>
 </section>
@@ -24,29 +19,24 @@ image: https://source.unsplash.com/WNAO036c6FM/2000x1322?a=.png
 			<input type="hidden" name="_to" value="support@cloudcannon.com">
 			<input type="text" name="_gotcha" style="display: none;">
 
-			<label for="name">Name</label>
-			<input type="text" name="name" id="name" placeholder="Enter your name...">
+			<label for="name">Имя</label>
+			<input type="text" name="name" id="name" placeholder="Введите ваше имя">
 
-			<label for="email">Email Address</label>
-			<input type="email" name="email" id="email" placeholder="Enter your email..." required>
+			<label for="email">Email</label>
+			<input type="email" name="email" id="email" placeholder="Введите ваш email..." required>
 
-			<label for="message">Message</label>
-			<textarea name="message" id="message" placeholder="Enter your message..."></textarea>
+			<label for="message">Сообщение</label>
+			<textarea name="message" id="message" placeholder="Введите ваше сообщение..."></textarea>
 
-			<input type="submit" value="Send Message">
+			<input type="submit" value="Отправить сообщение">
 		</form>
 
 		<div class="contact-details">
-			<h3>Address</h3>
-			<address><a target="_blank" href="https://www.google.com/maps/place/{{ page.map.address | url_encode }}">{{ page.map.address | replace: ", ", ", <br>" }}</a></address>
-
 			<h3>Email</h3>
-			<p class="editable"><a href="mailto:support@example.com">support@example.com</a></p>
+			<p class="editable"><a href="mailto:info@flowersales.co">info@flowersales.co</a></p>
 		</div>
 	</div>
 </section>
-
-<div class="map" id="map"></div>
 
 <script>
 	window.mapData = {{ page.map | jsonify }};
