--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 ---
-title: Home
-description: The latest app to help you find new friends with common interests.
-image: https://source.unsplash.com/j5LSbCqB1wA/2000x1322?a=.png
-bottom_image: https://source.unsplash.com/S_VbdMTsdiA/2000x1322?a=.png
+title: Главная
+description: Мы сделали для Вас поиск цветов и букетов быстрее и удобнее.
+image: https://firebasestorage.googleapis.com/v0/b/flowersales-471f5.appspot.com/o/web-site%2Franunkulyus_flowers_bouquet_elm_55658_3840x2160.png?alt=media&token=8f0b032b-aa00-4633-9c5c-6c7663c15f4b
+bottom_image: https://firebasestorage.googleapis.com/v0/b/flowersales-471f5.appspot.com/o/web-site%2Fwallperz.com-20170315161520.png?alt=media&token=00bc28e8-00cf-43cd-a67d-985ff5abf0bb
 ---
 
 <section class="hero" style="background-image: url({% include relative-src.html src=page.image %})">
 	<div class="inner-hero text-container">
 		<div class="hero-text-container">
-			<h1 class="editable">Make a new friend today</h1>
-			<p class="subtext editable">Frisco helps you find new friends with common interests. Search for a new Tennis partner, find a baking side-kick or befriend a new drinking buddy.</p>
-			<div class="cta button alt"><a href="#">Join Now</a></div>
+			<h1 class="editable">Вы ищете цветы?</h1>
+			<p class="subtext editable">Мы сделали для Вас поиск цветов и букетов быстрее и удобнее.</p>
+			<div class="cta button alt"><a href="#">Скачать в Appstore</a></div>
 		</div>
 	</div>
 	<div class="learn-more"><a href="#learn-more">Узнать больше <span class="arrow">&#x25BC;</span></a></div>
@@ -32,11 +32,11 @@ bottom_image: https://source.unsplash.com/S_VbdMTsdiA/2000x1322?a=.png
 	<section class="info">
 		<div class="container flex">
 			<div class="text">
-				<h2 class="editable">Pick your interests</h2>
-				<p class="editable">The more you tell Frisco the better it gets to know you. Frisco matches you with people who share similar interests with you.</p>
+				<h2 class="editable">Почему так легко найти подходящий букет?</h2>
+				<p class="editable">Мы располагаем довольно обширным каталогом. А именно, Вы сможете найти - розы в нескольких вариантах цвета, тюльпаны, хризантемы, герберы, лилии, ромашки, орхидеи, пионы и это еще не конец списка.</p>
 			</div>
 			<div class="image">
-				<img class="editable" src="http://placehold.it/650x1300" alt="Screenshot" />
+				<img class="editable" src="{{ site.baseurl }}/images/Screenshot2.png" alt="Screenshot" />
 			</div>
 		</div>
 	</section>
@@ -44,11 +44,35 @@ bottom_image: https://source.unsplash.com/S_VbdMTsdiA/2000x1322?a=.png
 	<section class="info">
 		<div class="container flex">
 			<div class="text">
-				<h2 class="editable">Swipe and go</h2>
-				<p class="editable">Frisco shows you cards with people who might be a good match for friendship. Swipe left to move to the next card or right to start talking.</p>
+				<h2 class="editable">Вы никогда не заскучаете пока мы будем искать для вас букеты!</h2>
+				<p class="editable">Во время поиска Вы узнаете общее количество букетов, которые мы нашли, минимальную и среднюю цену.</p>
 			</div>
 			<div class="image">
-				<img class="editable" src="http://placehold.it/650x1300" alt="Screenshot" />
+				<img class="editable" src="{{ site.baseurl }}/images/Screenshot3.png" alt="Screenshot" />
+			</div>
+		</div>
+	</section>
+
+	<section class="info">
+		<div class="container flex">
+			<div class="text">
+				<h2 class="editable">Удобное отображение результатов поиска!</h2>
+				<p class="editable">Мы постарались максимально увеличить удобство отображения букетов. Вы сразу же сможете оценить букет внешне, увидеть в каком магазине он продается, возможность доставки, цену и конечно же - добавить в избранное.</p>
+			</div>
+			<div class="image">
+				<img class="editable" src="{{ site.baseurl }}/images/Screenshot4.png" alt="Screenshot" />
+			</div>
+		</div>
+	</section>
+
+	<section class="info">
+		<div class="container flex">
+			<div class="text">
+				<h2 class="editable">Не желаете потерять понравившийся букет?</h2>
+				<p class="editable">Чтобы в будущем Вы смогли найти быстро понравившийся Вам букет ранее, просто добавьте его в избранное.</p>
+			</div>
+			<div class="image">
+				<img class="editable" src="{{ site.baseurl }}/images/Screenshot5.png" alt="Screenshot" />
 			</div>
 		</div>
 	</section>
@@ -56,9 +80,9 @@ bottom_image: https://source.unsplash.com/S_VbdMTsdiA/2000x1322?a=.png
 	<section class="hero" style="background-image: url({% include relative-src.html src=page.bottom_image %})">
 		<div class="inner-hero text-container">
 			<div class="hero-text-container">
-				<h2 class="editable">Find your buddy today</h2>
-				<p class="subtext editable">It's free, fun and an exciting way to meet new people.</p>
-				<div class="cta button alt"><a href="#">Join Now</a></div>
+				<h2 class="editable">Найдите подходящий букет всего за пару секунд!</h2>
+				<p class="subtext editable">Поиск цветов стал проще и удобнее. Теперь это можно сделать установив наше приложение из Appstore.</p>
+				<div class="cta button alt"><a href="#">Скачать в Appstore</a></div>
 			</div>
 		</div>
 	</section>
