--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 title: О нас
 description: Мы делаем поиск цветов и букетов для Вас быстрее и удобнее.
-image: https://firebasestorage.googleapis.com/v0/b/flowersales-471f5.appspot.com/o/web-site%2F%D0%B2%D1%8B%D1%81%D1%82%D0%B0%D0%B2%D0%BA%D0%B0%20%D0%BF%D0%B8%D0%BE%D0%BD%D0%BE%D0%B23.jpg?alt=media&token=da31d83e-b677-4ca3-9e06-4410533a1091
+image: /images/background_images/background10.png
 ---
 
 <section class="hero" style="background-image: url({% include relative-src.html src=page.image %})">
