--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 ---
 title: Контакты
 description: Свяжитесь с нами!
-image: https://firebasestorage.googleapis.com/v0/b/flowersales-471f5.appspot.com/o/web-site%2F319665-blackangel.png?alt=media&token=2be0d866-ff88-4573-95ec-119511fb3bc3
+image: '/images/background_images/background2.png'
 ---
 
 <section class="hero" style="background-image: url({% include relative-src.html src=page.image %})">
