--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 title: Главная
 description: Мы сделали для Вас поиск цветов и букетов быстрее и удобнее.
-image: https://firebasestorage.googleapis.com/v0/b/flowersales-471f5.appspot.com/o/web-site%2Franunkulyus_flowers_bouquet_elm_55658_3840x2160.png?alt=media&token=8f0b032b-aa00-4633-9c5c-6c7663c15f4b
-bottom_image: https://firebasestorage.googleapis.com/v0/b/flowersales-471f5.appspot.com/o/web-site%2Fwallperz.com-20170315161520.png?alt=media&token=00bc28e8-00cf-43cd-a67d-985ff5abf0bb
+image: /images/background_images/background7.png
+bottom_image: /images/background_images/background9.png
 ---
 
 <section class="hero" style="background-image: url({% include relative-src.html src=page.image %})">
