--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ bottom_image: /images/background_images/background9.png
 		<div class="hero-text-container">
 			<h1 class="editable">Вы ищете цветы?</h1>
 			<p class="subtext editable">Мы сделали для Вас поиск цветов и букетов быстрее и удобнее.</p>
-			<div class="cta button alt"><a href="#">Скачать в Appstore</a></div>
+			<div class="cta button alt"><a href="https://appsto.re/ru/7d8fib.i">Скачать в Appstore</a></div>
 		</div>
 	</div>
 	<div class="learn-more"><a href="#learn-more">Узнать больше <span class="arrow">&#x25BC;</span></a></div>
@@ -82,7 +82,7 @@ bottom_image: /images/background_images/background9.png
 			<div class="hero-text-container">
 				<h2 class="editable">Найдите подходящий букет всего за пару секунд!</h2>
 				<p class="subtext editable">Поиск цветов стал проще и удобнее. Теперь это можно сделать установив наше приложение из Appstore.</p>
-				<div class="cta button alt"><a href="#">Скачать в Appstore</a></div>
+				<div class="cta button alt"><a href="https://appsto.re/ru/7d8fib.i">Скачать в Appstore</a></div>
 			</div>
 		</div>
 	</section>
