--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@ title:
 <section class="diagonal alternate">
 	<div class="container halves">
 		<div>
-			<ul class="image-list">				
-				<li><img src="{{ site.baseurl }}/images/screenshot_2.png" width="300" style="margin-bottom: 40px;"></li>
-				<li><img src="{{ site.baseurl }}/images/screenshot_3.png" width="300" style="margin-bottom: 40px;"></li>				
-				<li><img src="{{ site.baseurl }}/images/screenshot_5.png" width="300" style="margin-bottom: 40px;"></li>
-			</ul>
+			<h3 class="editable">Как устроен наш сервис?</h3>
+			<p class="editable">1. Мы самостоятельно управляем своей базой данных надежных цветочных интернет-магазинов, клиенты были уверены в том, что мы предоставляем только качественный контент.</p>
+			<p class="editable">2. Во время поиска, пользователь вводит интересующий его тип букета, поиск отображает результаты сперва по типажу букета и последний шаг - это непосредственно уже сам поиск букетов по нашим доверенным интернет-магазинам.</p>			
+			<p class="editable">3. В конечном итоге, выдается результаты поиска букетов с отображением: наименования букета, цены, интернет-магазина, возможность доставки и кнопкой добавления в избранное.</p>
+			<p class="editable">4. По нажатию на букет, пользователя переносит уже на страницу самого букета в интернет-магазине. То есть, мы ничего не продаем сами, а только ищем.</p>
 		</div>
-		<div>					
-			<h3 class="editable">Как это работает?</h3>
-			<p class="editable">Мы самостоятельно управляем своей базой данных надежных цветочных интернет-магазинов, чтобы вы были уверены, что мы предоставляем только качественный контент.</p>
-			<p class="editable">Во время поиска пользователь вводит интересующий его тип букета, поиск отображает результаты сперва по типажу букета и последний шаг - это непосредственно уже сам поиск букетов по нашим доверенным интернет-магазинам.</p>
-			<p class="editable">Если понравился букет, можно перейти сразу же на страницу букета и заказать его.</p>
-			<p class="editable"></p>
-		</div>
+	</div>
+	<div class="container halves">
+		<div>
+		<img src="{{ site.baseurl }}/images/screenshot_2.png" width="300" style="margin-right: 40px; margin-top: 40px;">
+		<img src="{{ site.baseurl }}/images/screenshot_3.png" width="300" style="margin-right: 40px; margin-top: 40px;">
+		<img src="{{ site.baseurl }}/images/screenshot_5.png" width="300">			
+		</div>		
 	</div>
 </section>
